Development of movie shows book API and few updates
